--- a/rapporter/kategorier.yml
+++ b/rapporter/kategorier.yml
@@ -15,6 +15,10 @@ statistikk:
   navn: Statistikk
   ikon: ""
   senter: arrangement
+ukmfestivalen:
+  navn: UKM Festivalen
+  ikon: ""
+  senter: arrangement
 
 # KATEGORIER FOR 
 user_kontakt:
