--- a/client/package.json
+++ b/client/package.json
@@ -13,14 +13,15 @@
   },
   "dependencies": {
     "@highlightjs/vue-plugin": "^2.1.0",
-    "prettier": "^2.8.4",
     "jquery": "^3.6.1",
-    "ukm-components-vue3": "^1.0.0",
+    "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.2",
+    "ukm-components-vue3": "^1.0.0",
     "ukm-spa": "^1.0.9",
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.16",
     "@types/node": "^18.13.0",
     "@types/toastify-js": "^1.11.1",
     "@vitejs/plugin-vue": "^4.0.0",
