--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "prettier-plugin-tailwindcss": "^0.2.2",
     "ukm-components-vue3": "^1.0.1",
     "ukm-spa": "^1.0.9",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.16",
