Fikser 2 errors og legger til downlevelIteration på tsconfig

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -11,6 +11,7 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
+    "downlevelIteration": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
