--- a/client-diplom/.gitignore
+++ b/client-diplom/.gitignore
@@ -80,6 +80,7 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
+dist
 
 # Gatsby files
 .cache/
@@ -103,3 +104,5 @@ typings/
 .tern-port
 
 # All files in source but not main.ts
+src/*
+!src/main.ts
