--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check build-only",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "watch": "vite build --watch",
-    "type-check": "vue-tsc --noEmit",
+    "dev": "node ./node_modules/vite/bin/vite.js",
+    "build": "node ./node_modules/npm-run-all/bin/run-p/index.js type-check build-only",
+    "preview": "node ./node_modules/vite/bin/vite.js preview",
+    "build-only": "node ./node_modules/vite/bin/vite.js build",
+    "watch": "node ./node_modules/vite/bin/vite.js build --watch",
+    "type-check": "node ./node_modules/vue-tsc/bin/vue-tsc.js --noEmit",
     "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx,json,vue}\""
   },
   "dependencies": {
